# wsk-deploy-python-anywhere

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  compose.mysql.override.yaml  compose.postgresql.override.yaml  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: urls.py  wsgi.py
app/home/: models.py  tests.py
app/home/templates/home/: home_page.html  welcome_page.html
app/search/: tests.py
app/settings/: base.py  dev.py
app/static_src/scss/: app.scss
app/style_guide/: apps.py  tests.py  urls.py  views.py
app/style_guide/templates/style_guide/: pico_blocks_page.html  style_guide.html
app/style_guide/templates/style_guide/includes/: accordions.html  article.html  buttons.html  footer.html  forms.html  group.html  header.html  loading.html  modal.html  modal_trigger.html  preview.html  progress.html  tables.html  theme_switcher.html  typography.html
docs/: README.md  backend-development.md  deployment.md  frontend-development.md  todo.md  what-next.md
docs/ideas/: README.md  add-a-page-type-for-an-image-gallery.md  add-a-product-catalog.md  add-forms-for-site-visitor-feedback.md  build-a-full-fledged-blog.md  expand-the-home-page-type.md  improve-seo-by-adding-an-xml-sitemap.md  use-a-mysql-or-postgres-database-instead-of-sqlite.md
scripts/: images.js  server.js
static_compiled/css/: app.css  app.css.map
static_compiled/css/components/: example.css  example.css.map
static_compiled/js/: app.js  app.js.map
static_src/js/: app.js
static_src/scss/: app.scss
