[project]
name = "wagtail-starter-kit"
version = "0.1.0"
description = "Full Stack Wagtail Starter Kit"
authors = [{name = "nickmoreton", email = "nickmoreton@me.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.3",
    "wagtail>=6.3",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "coverage>=7.6.7",
    "django-upgrade>=1.22.1",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pyupgrade>=3.19.0",
]
